# quantumflow-prototypes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.cpu  Dockerfile.gpu-cu12  Dockerfile.gpu-cu12-cuquantum  GROK_QUERY_FOR_X_POST.md  LICENSE  PUBLICATION_SEQUENCE.md  README.md  X_POST_CREATION.md  pyproject.toml
EVIDENCE_PACK_AEROSPACE/: AEROSPACE_CERTIFICATION_MANIFESTO.md  FOR_ENGINEERS.md  MCDC_REPORT.md  TOOL_QUALIFICATION_PLAN.md  TRACEABILITY_MATRIX.md  sigma_core.c
assets/: README.md
docs/: API.md  BENCHMARKS.md  DEPENDENCIES_VERIFICATION.md  DEVTALK_ORGANIZATION_SOLUTION.md  DEVTALK_POST_TEMPLATE.md  HUGGINGFACE_MODEL_CARD.md  HUGGINGFACE_SPACE_README.md  NVIDIA_INTEGRATION.md  REAL_GPU_UTILIZATION.md  RELEASE_NOTES_TEMPLATE.md  X_POST_TEMPLATE.md  X_STRATEGY_ELON_STYLE.md  X_TWITTER_ANALYSIS.md  ZENODO_SETUP.md
prototypes/: ECOSYSTEM_COMPATIBILITY.md  README.md  ecosystem_smoke.py  requirements.cpu.txt  requirements.gpu-cu12-cuquantum.txt  requirements.gpu-cu12.txt
prototypes/prototype_ctdr/: CHECKLIST.md  CMakeLists.txt  CODE_VALIDATION_REPORT.md  FINAL_VALIDATION_1.4_1.5.md  FINAL_VALIDATION_REPORT.md  METRICS_EXPLANATION.md  PHASE_1_1_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PROGRESS_STATUS.md  README.md  requirements.txt  run_checkpoint_cp20.py  test_benchmark_simple.sh  verify_metrics.py
prototypes/prototype_ctdr/benchmarks/: benchmark_baire_vs_vectordb.py  benchmark_dhm_infinite_context.py  benchmark_energy_efficiency.py  benchmark_entropy.py  benchmark_full_comparison.py  benchmark_gpu_utilization.py  benchmark_gpu_utilization_phase2.py  benchmark_kv_cache.py  benchmark_landauer_gap.py  benchmark_mpo.py  benchmark_padic_attention.py  benchmark_performance.py  benchmark_reliability.py  benchmark_reliability_phase2.py  crash_test_dpx_scale_up.py  crash_test_real.py  crash_test_scaling.py  raw_proof.py  run_all_benchmarks.py  run_benchmarks.py  unified_phase2_benchmark.py
prototypes/prototype_ctdr/benchmarks/results/: latest.json  performance.json  versioning.json
prototypes/prototype_ctdr/config/: config.yaml
prototypes/prototype_ctdr/configs/: h100_config.json
prototypes/prototype_ctdr/cuda/: kernels.cu  kernels.h  kernels.py  kernels_bindings.cu
prototypes/prototype_ctdr/demo/: demo.py  demo_full.py  demo_simple.py
prototypes/prototype_ctdr/results/: memory_log.json
prototypes/prototype_ctdr/scripts/: update_versioning.sh
prototypes/prototype_ctdr/src/: __init__.py  blame_logic.py  core.py  dhm.py  drc.py  drc_orchestrator.py  encoding.py  h100_optimization.py  hce.py  kv_cache_steering.py  main.py  padic_attention.py  rla_stack.py  tensor_networks.py
prototypes/prototype_ctdr/src/protocols/: __init__.py  a2a.py  rep.py
prototypes/prototype_ctdr/tests/: __init__.py  test_einsum.py  test_kv_cache_steering.py  test_lcp.py  test_rla_kv_cache_integration.py
prototypes/prototype_ctdr/tests/phase2/: test_drc_hce_smoke.py
quantumflow/: __init__.py  cli.py
release-artifacts/: README.md  ecosystem_results.sample.json  (+3 more)
(+28 files in other folders)
